# desafio-muralis

./: README.md  manage.py  pyproject.toml  requirements.txt
desafio_muralis/: asgi.py  router.py  settings.py  urls.py  wsgi.py
desafio_muralis/core/: apps.py
desafio_muralis/core/management/commands/: update_funcionarios_fabrica.py
desafio_muralis/funcionario/: admin.py  apps.py  models.py
desafio_muralis/funcionario/api/: serializers.py  viewsets.py
desafio_muralis/funcionario/migrations/: 0001_initial.py  0002_funcionarios_default.py
desafio_muralis/funcionario_fabrica/: admin.py  apps.py  models.py
desafio_muralis/funcionario_fabrica/api/: serializers.py  viewsets.py
desafio_muralis/funcionario_fabrica/migrations/: 0001_initial.py  0002_funcionarios_fabrica_default.py
