[tool.poetry]
name = "desafio_muralis"
version = "0.1.0"
description = "Projeto de desafio destinado a Muralis"
authors = ["ismaelbenjamim <ismaelbenjamim15@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
